# gadoc

./: .gitignore  README.md  default.nix  gadoc.cabal  project.nix
frontend/: build.sh  copy-sample-index.sh  index.html  index.js  package-lock.json  packages.dhall  publish-build.sh  spago.dhall
frontend/src/: Browser.js  Browser.purs  Dropdown.purs  HDAssets.js  HDAssets.purs  Index.js  Index.purs  Main.purs  PackageDocs.purs  Query.purs  Search.js  Search.purs  hackage.css  search-style.css  style.css
src/: Main.hs  Paths.hs
src/Gadoc/: Lib.hs
